--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,37 @@
 # Dependencies
-node_modules/
-server/node_modules/
+node_modules
+.pnp
+.pnp.js
 
-# Build output
-dist/
-dist-ssr/
-build/
+# Testing
+coverage
 
-# Environment files
+# Production
+dist
+build
+
+# Misc
+.DS_Store
 .env
 .env.local
-.env.*.local
-
-# IDE / Editor
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS files
-.DS_Store
-Thumbs.db
-desktop.ini
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
-*.log
 npm-debug.log*
 yarn-debug.log*
-pnpm-debug.log*
+yarn-error.log*
 
-# Coverage / Testing
-coverage/
-.nyc_output/
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Capacitor (Android build)
-android/
-ios/
-
-# Temporary
-tmp/
-temp/
-
-# Agent files
-.agent/
-.gemini/
+# CoastalGuard specific (if applicable)
+server/.env
+server/node_modules
