--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "bluelogic",
+  "name": "coastalguard",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Real-time maritime safety and SOS communication system for fishermen and coastal authorities.",
+  "author": "Yeshwanth Raj Selvaraj",
   "type": "module",
   "scripts": {
     "dev": "vite",
