Add Code of Conduct and define License in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "Real-time maritime safety and SOS communication system for fishermen and coastal authorities.",
   "author": "Yeshwanth Raj Selvaraj",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
