--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,52 @@
 # Dependencies
-node_modules
-.pnp
-.pnp.js
+node_modules/
+server/node_modules/
 
-# Testing
-coverage
-
-# Production
-dist
-build
-
-# Misc
-.DS_Store
+# Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.production
+.env.*.local
+
+# Build output
+dist/
+build/
+
+# IDE & Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
 
 # Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 
-# CoastalGuard specific (if applicable)
-server/.env
-server/node_modules
+# Capacitor (platform-specific builds)
+android/.gradle/
+android/app/build/
+android/build/
+android/.idea/
+android/local.properties
+
+# Coverage
+coverage/
+
+# Misc
+*.tgz
+.cache/
+.temp/
+.tmp/
