--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "coastalguard",
+  "name": "bluelogic",
   "private": true,
-  "version": "1.0.0",
-  "description": "Real-time maritime safety and SOS communication system for fishermen and coastal authorities.",
-  "author": "Yeshwanth Raj Selvaraj",
-  "license": "MIT",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
